<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sacc"
        android:enabled="true"
        android:icon="@mipmap/ic_computer_black_24dp"
        android:title="@string/opt1_VSACC"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_programacao"
        android:enabled="true"
        android:icon="@mipmap/ic_today_black_24dp"
        android:title="@string/opt2_PROGA"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_apoio"
        android:enabled="true"
        android:icon="@mipmap/ic_people_outline_black_24dp"
        android:title="@string/opt3_APOIO"
        app:showAsAction="ifRoom" />
</menu>