<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.ufcg.sacc2017.fragments.FragmentSACC">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/ufcg_land"
            android:backgroundTint="@color/colorAccentLight"
            android:backgroundTintMode="multiply"
            android:elevation="3dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_computacao_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:src="@drawable/indice"
                android:tint="@color/white" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/standard_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="5"
                android:text="@string/title"
                android:textAlignment="center"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/tv_subtitle"
                style="@style/standard_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="5"
                android:text="@string/subtitle"
                android:textAlignment="center"
                android:textSize="16sp" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/about_us_description"
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:background="@color/grey" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:src="@drawable/ic_event_black_24dp"
                        android:tint="@color/colorAccentDark" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:background="@color/grey" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/date"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:background="@color/grey" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:src="@drawable/ic_place_black_24dp"
                        android:tint="@color/colorAccentDark" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:background="@color/grey" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/ufcg"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/street"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:layout_marginTop="3dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/neighborhood"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:layout_marginTop="3dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/city"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:layout_marginTop="3dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/location"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:layout_marginTop="3dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:background="@color/grey" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:src="@drawable/ic_mail_black_24dp"
                        android:tint="@color/colorAccentDark" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:background="@color/grey" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/mail"
                    android:textAlignment="center"
                    android:textSize="14sp"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/phone"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:layout_marginTop="3dp"
                    />


            </LinearLayout>

    </LinearLayout>

</ScrollView>